--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "flowbite-react": "^0.11.8",
     "react": "^18.2.0",
